# FluxFrontend

./: .gitignore  .prettierignore  .prettierrc.json  Dockerfile  LICENSE  README.md  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  tsconfig.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
examples/changelog/: README.md  example-release.json
src/: App.tsx  index.css  main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/core/: dynamics.ts  expression.ts  json-path.ts  json-template.ts  result.ts  template.ts  types.ts
src/core/http/: http-client.ts
src/main/common/: platform.ts  version.ts
src/main/common/api/: api-client.ts  endpoints.ts  server-config.ts  session.ts  token-storage.ts  workspace-context.ts
src/main/common/ui/: AnchoredMenu.tsx  BlockEditor.tsx  Button.tsx  ContentBlocks.tsx  ContextMenu.tsx  Field.tsx  HighlightedInput.tsx  Modal.tsx  OptionsEditor.tsx  Switch.tsx  Tabs.tsx  VarNameInput.tsx  VariantChips.tsx  badges.tsx  dnd.tsx  feedback.tsx  templateScope.tsx  toast.tsx  useDelayedFlag.ts  useEscClose.ts  useLayout.ts  useUiPrefs.ts
src/main/common/utils/: cn.ts  dnd-tree.ts  format.ts
src/main/features/admin/data/: admin-repository.ts
src/main/features/admin/domain/: models.ts
src/main/features/admin/ui/: AdminScreen.tsx  Sparkline.tsx  parts.tsx  useAdminScreen.ts  useInstanceMeta.ts
src/main/features/auth/data/: auth-repository.ts
(+155 files in other folders)
